# HS2-EPS-flightSW

./: .gitignore  .gitmodules  README.md
HS2-EPS-BatteryManager/: CMakeLists.txt  HS2-EPS-BatteryManager.ino  README.md
HS2-EPS-BatteryManager/fprime/: ADCControl.fpp  BQ25756.cpp  BQ25756.hpp  BQ25756Ports.fpp  BQ25756Types.fpp  BQ25756_ADCControl.hpp  BatteryMonitor.cpp  BatteryMonitor.fpp  BatteryMonitor.hpp  CMakeLists.txt  FaultStatus.cpp  FaultStatus.fpp  FaultStatus.hpp  HeatShutup.cpp  HeatShutup.fpp  HeatShutup.hpp  README.md  SafetyConfiguration.cpp  SafetyConfiguration.fpp  SafetyConfiguration.hpp  i2c.cpp  i2c.hpp
HS2-EPS-BatteryManager/include/: BQ25756.h  BQ25756_reg.h  BatteryMonitor.h  FaultStatus.h  HeatShutup.h  SafetyConfiguration.h  i2c.h
HS2-EPS-BatteryManager/old_work/BQ25756_setup/: BQ25756.c  BQ25756.cpp  BQ25756_ard.h  BQ25756_setup.ino  changeThreshold.cpp
HS2-EPS-BatteryManager/old_work/changeThreshold/: BQ25756.cpp
HS2-EPS-BatteryManager/src/: BQ25756.cpp  BQ25756.h  BQ25756.hpp  BatteryMonitor.cpp  BatteryMonitor.h  FaultStatus.cpp  FaultStatus.h  FaultStatus.hpp  HeatShutup.cpp  HeatShutup.h  SafetyConfiguration.cpp  SafetyConfiguration.h  i2c.cpp  i2c.h
HS2-EPS-BatteryManager/stubs/: README.md  Wire.cpp  Wire.h
HS2-EPS-BatteryManager/test/: BQ25756.cpp  BQ25756.h  test.ino
HS2-EPS-BatteryManager/test/test_HeatShutup/: BQ25756.cpp  BQ25756.h  HeatShutup.cpp  HeatShutup.h  i2c.cpp  i2c.h  test_HeatShutup.cpp  test_HeatShutup.h  test_HeatShutup.ino
HS2-EPS-BatteryManager/test_example/: initial_test.ino
(+38 files in other folders)
